    by the Windows file browser in DOSBox-X. (Wengier)
  - The save state feature now tries to save and then
    restore the mounted drives of all types (if the
    paths or image files still exist on host system).
    This fixes the "save state corrupted" error while
    trying to load saved states but the drives are not
    yet mounted in DOSBox-X. (Wengier)
  - The confirm dialogs for loading saved states now
    appear on non-Windows platforms as well. (Wengier) 
  - Increased the number of save slots from 10 to 100.
    Each page in the save slot menu (under "Capture")
    still shows 10 slots as before, but you can now go
    to the previous or next page (up to 10 pages) for
    more save slots (100 in total). (Wengier).
  - Added support for Glide wrapper. The library file
    glide2x.dll/libglide2x.so/libglide2x.dylib will be
    required for Glide to work. Be sure to use 32-bit
    dll for 32-bit DOSBox-X binary, and 64-bit dll for
    64-bit DOSBox-X binary. (Wengier)
0.83.4
  - Fixed loading saved states in fullscreen mode with
    the "aspect=true" setting. (Wengier)
  - Added config option "saveslot" to select default
    save slot (1-10). The timestamps for the saved
    states will also be shown in the menu. (Wengier)
  - Added key mapper for sending the Ctrl+Alt+Del key,
    with HOST(F11/F12)+Del by default. (Wengier)
  - Added dosbox-x.conf setting to ignore the EGA/VGA
    "extended memory" bit. It was originally defined
    back when stock EGA/VGA cards could ship with 64KB
    of memory. The option is needed for DOS games that
    accidentally clear the bit when using unchained
    256-color modes (Mr. Blobby).
  - Added new default value "auto" for the setting
    "usescancodesauto" (in [sdl] section of the config
    file) to work around issues with non-US keyboard
    layouts on SDL1 builds. (Wengier)
  - Added code pages 808, 850, 852, 853, 855, 857,
    858, 869, 872 for host to guest codepage mapping