@@ -1788,21 +1788,25 @@ static void UI_Select(GUI::ScreenSDL *screen, int select) {
             auto *np6 = new ShowStateCorrupt(screen, 150, 120, "Save state corrupted! Program may not work.");
             np6->raise();
             } break;
-        case 22: {
+        case 22: if (saveloaderr.size()) {
+            auto *np8 = new ShowStateCorrupt(screen, 150, 120, saveloaderr.c_str());
+            np8->raise();
+            } break;
+        case 23: {
             auto *np7 = new ShowLoadWarning(screen, 150, 120, "DOSBox-X version mismatch. Load the state anyway?");
             np7->raise();
             } break;
-        case 23: {
+        case 24: {
             auto *np7 = new ShowLoadWarning(screen, 150, 120, "Program name mismatch. Load the state anyway?");
             np7->raise();
             } break;
-        case 24: {
+        case 25: {
             auto *np7 = new ShowLoadWarning(screen, 150, 120, "Memory size mismatch. Load the state anyway?");
             np7->raise();
             } break;
-        case 25: if (saveloaderr.size()) {
-            auto *np8 = new ShowStateCorrupt(screen, 150, 120, saveloaderr.c_str());
-            np8->raise();
+        case 26: {
+            auto *np7 = new ShowLoadWarning(screen, 150, 120, "Are you sure to remove the state in this slot?");
+            np7->raise();
             } break;
         default:
             break;
